<!--
  ~ /*
  ~  * PROJECT LICENSE
  ~  *
  ~  * This project was submitted by Beatriz Ovejero as part of the Android Developer
  ~  * Nanodegree at Udacity.
  ~  *
  ~  * As part of Udacity Honor code, your submissions must be your own work, hence
  ~  * submitting this project as yours will cause you to break the Udacity Honor Code
  ~  * and the suspension of your account.
  ~  *
  ~  * As author of the project, I allow you to check it as a reference, but if you submit it
  ~  * as your own project, it's your own responsibility if you get expelled.
  ~  *
  ~  * Copyright (c) 2018 Beatriz Ovejero
  ~  *
  ~  * Besides the above notice, the following license applies and this license notice must be
  ~  * included in all works derived from this project.
  ~  *
  ~  * MIT License
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<resources>
    <string name="app_name">QuizMadrid</string>
    <string name="Question1">Who was the King who moved his court from Toledo to Madrid?:</string>
    <string name="Question2">Francis I of France was imprisoned in Madrid. Do you know where?:</string>
    <string name="Question3">The Second of May 1808 is also known as:</string>
    <string name="Question4">When did Joseph Bonaparte become King of Spain?: </string>
    <string name="Question5">The Madrid\'s first underground railway line was opened in:</string>
    <string name="Question6">Choose typical dishes from Madrid?:</string>
    <string name="Answer1_a">Felipe II</string>
    <string name="Answer1_b">Felipe III</string>
    <string name="Answer1_c">Carlos I</string>
    <string name="Answer1_d">Carlos III</string>
    <string name="Answer2_a">Royal Palace</string>
    <string name="Answer2_b">Casa de la Villa</string>
    <string name="Answer2_c">Torre de los Lujanes</string>
    <string name="Question3Hint">Different name for this historical rebellion</string>
    <string name="Question4Hint">Year</string>
    <string name="Question5Hint">Year</string>
    <string name="Answer6_a">Fabada</string>
    <string name="Answer6_b">Callos</string>
    <string name="Answer6_c">Cocido</string>
    <string name="Answer6_d">Pan con tomate</string>
    <string name="Question7">Have you enjoyed this quiz?</string>
    <string name="Answer7_a">Yes</string>
    <string name="Answer7_b">No</string>
    <string name="QuestionHint">Your answer</string>
    <string name="Reset">Reset</string>
    <string name="Submit">Submit</string>
    <string name="Bonus">Enjoy Madrid!</string>
    <string name="Mamelukes">The Charge of the Mamelukes</string>
</resources>
