<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * PROJECT LICENSE
  ~  *
  ~  * This project was submitted by Beatriz Ovejero as part of the Android Developer
  ~  * Nanodegree at Udacity.
  ~  *
  ~  * As part of Udacity Honor code, your submissions must be your own work, hence
  ~  * submitting this project as yours will cause you to break the Udacity Honor Code
  ~  * and the suspension of your account.
  ~  *
  ~  * As author of the project, I allow you to check it as a reference, but if you submit it
  ~  * as your own project, it's your own responsibility if you get expelled.
  ~  *
  ~  * Copyright (c) 2018 Beatriz Ovejero
  ~  *
  ~  * Besides the above notice, the following license applies and this license notice must be
  ~  * included in all works derived from this project.
  ~  *
  ~  * MIT License
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:contentDescription="Madrid"
                android:scaleType="fitXY"
                android:src="@drawable/madrid" />

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question1" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    style="@style/RadioStyle"
                    android:text="@string/Answer1_a" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/RadioStyle"
                    android:text="@string/Answer1_b"   />

                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/RadioStyle"
                    android:text="@string/Answer1_c" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    style="@style/RadioStyle"
                    android:text="@string/Answer1_d" />

            </RadioGroup>

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question2" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton5"
                    style="@style/RadioStyle"
                    android:text="@string/Answer2_a" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    style="@style/RadioStyle"
                    android:text="@string/Answer2_b"

                    />

                <RadioButton
                    android:id="@+id/radioButton7"
                    style="@style/RadioStyle"
                    android:text="@string/Answer2_c" />
            </RadioGroup>

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question3" />

            <EditText
                android:id="@+id/editableAnswer1"
                style="@style/EditableStyle"
                android:hint="@string/Question3Hint" />

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question4" />

            <EditText
                android:id="@+id/editableAnswer2"
                style="@style/EditableStyle"
                android:hint="@string/Question4Hint"
                android:inputType="number"/>

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question5" />

            <EditText
                android:id="@+id/editableAnswer3"
                style="@style/EditableStyle"
                android:hint="@string/Question5Hint"
                android:inputType="number"/>

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question6" />

            <CheckBox
                android:id="@+id/checkb1"
                style="@style/RadioStyle"
                android:text="@string/Answer6_a" />

            <CheckBox
                android:id="@+id/checkb2"
                style="@style/RadioStyle"
                android:text="@string/Answer6_b" />

            <CheckBox
                android:id="@+id/checkb3"
                style="@style/RadioStyle"
                android:text="@string/Answer6_c" />

            <CheckBox
                android:id="@+id/checkb4"
                style="@style/RadioStyle"
                android:text="@string/Answer6_d" />

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/Question7" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/yes"
                    style="@style/RadioStyle"
                    android:onClick="tenthQuestionRight"
                    android:text="@string/Answer7_a" />

                <RadioButton
                    android:id="@+id/no"
                    style="@style/RadioStyle"
                    android:onClick="tenthQuestionWrong"
                    android:text="@string/Answer7_b" />

            </RadioGroup>

            <ImageView
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/right"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/wrong"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/submitButton"
                    style="@style/ButtonStyle"
                    android:onClick="getScore"
                    android:text="@string/Submit" />

                <Button
                    android:id="@+id/reset"
                    style="@style/ButtonStyle"
                    android:layout_toRightOf="@id/submitButton"
                    android:onClick="resetScore"
                    android:text="@string/Reset" />

                <TextView
                    android:id="@+id/display_result"
                    style="@style/Result"
                    android:layout_below="@id/submitButton"
                    android:layout_gravity="center"
                    android:text="" />


                <TextView
                    android:id="@+id/Bonus"
                    style="@style/Bonus"
                    android:layout_below="@id/display_result"
                    android:layout_gravity="center"
                    android:text="@string/Bonus" />

                <WebView
                    android:id="@+id/webView"
                    style="@style/Webview"
                    android:layout_below="@id/Bonus" />

            </RelativeLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>